--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
-security.headers.frame=false
+server.error.include-stacktrace=never
+
+#security.headers.frame=false
